feat: add more notification endpoints
